--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "http://localhost:8000/"
 languageCode = "en-us"
-title = "Hugo Hero Theme"
+title = "Limefitness"
 themesDir = "./themes"
 theme = "hugo-hero-theme"
 
